# l1-cov

./: .gitignore  aggregation.py  analysis.ipynb  collect_runs.py  experiments.py  main.py  main1.py  main_hpc.py  plotting.py  policies.py  pyproject.toml  qlearningpolicy.py  reinforce.py  tilecoding.py  trajectories.py
lib/: aggregation.py  environments.py  policies.py  qlearningpolicy.py  reinforce.py  trajectories.py
results/Mountaincar-Easy/: codex_l1_covs.pkl  codex_stats.pkl  eigenoptions_l1_covs.pkl  eigenoptions_stats.pkl  maxent_l1_covs.pkl  maxent_stats.pkl  params.pkl  random_l1_covs.pkl  random_stats.pkl
results/mountaincar_final/: codex_l1_covs.pkl  codex_stats.pkl  eigenoptions_l1_covs.pkl  eigenoptions_stats.pkl  maxent_l1_covs.pkl  maxent_stats.pkl  params.pkl  random_l1_covs.pkl  random_stats.pkl  sa_eigenoptions_l1_covs.pkl  sa_eigenoptions_stats.pkl
