[project]
name = "philip-l1cov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control,other]>=1.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pylance>=0.38.3",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]
