[project]
name = "philip-l1cov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control,other]>=1.2.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "pylance>=0.38.3",
    "scipy>=1.15.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
